--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -11,7 +11,7 @@
 /* Variables */
 :root {
     --avatar-size: 32px;
-    --background-image: url('https://i.imgur.com/7SbtKvw.png');
+    --background-image: url('https://cdn.discordapp.com/attachments/853402398708990002/976844090194931722/A9A7D73B-8EC6-4C02-B38F-739BAF3C9EA9.jpg');
     --home-image: url('https://i.imgur.com/233d55Y.gif');
     --background-solid: #161921;
     --background-solid-dark: #101218;
